--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -34,10 +34,10 @@ jobs:
           config_octicon: yes
           config_timezone: America/New_York
           config_twemoji: yes
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
+          plugin_achievements: no
+          # plugin_achievements_display: detailed
+          # plugin_achievements_secrets: yes
+          # plugin_achievements_threshold: C
           plugin_activity: yes
           plugin_activity_days: 14
           plugin_activity_filter: all
